--- a/static/style/GroupChatt.css
+++ b/static/style/GroupChatt.css
@@ -35,6 +35,7 @@
   transition: all 0.3s ease;
   color: #FFF;
   background-color: #222;
+  margin-top: -20px;
 }
 #contact-list-heading {
   font-size: 3rem;
@@ -48,8 +49,63 @@
   border-radius: 2px;
   color: white;
   background-color: rgba(154, 209, 212, 0.5);
-  font-size: 1.2rem
+  font-size: 1.2rem;
+  display: inline-block;
 }
+#test{
+  display: inline-block;
+  margin-top: -85px;
+  width: 60px;
+}
+#imgIcon{
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+#submitImg{
+  background: rgba(255, 255, 255, 0.8);
+  outline: 0;
+	font-family: 'roboto';
+	font-weight: 400;
+  border: 1px solid black;
+  height: 20px;
+  width: 90%;
+  margin: 2px 5% auto 5%;
+}
+.popupContainer{
+  position: relative;
+  right: 10px;;
+  top: 0px;
+  width: 150px;
+  height: 70px;
+}
+  .popupContainer .popupContent{
+    visibility: hidden;
+    z-index: 1;
+    height: 60px;
+    width: 200px;
+    display: block;
+    background-color: hotpink;
+    animation: fadeOut 1s;
+  }
+  @keyframes fadeOut {
+    from {opacity: 1;}
+    to {opacity: 0;}
+  }
+  .popupContainer .show{
+    visibility: visible;
+    animation: fadeIn 1s;
+  }
+@keyframes fadeIn {
+   from {opacity: 0;}
+   to {opacity: 1;}
+}
+#submitFlex{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 li{
   margin-bottom: 15px;
   margin-left: 20px;
