--- a/static/style/App.css
+++ b/static/style/App.css
@@ -95,8 +95,8 @@ ul {
 
 #myInfo div {
 	width: 90%;
-	padding: 1rem;
-    padding-top: 1rem;
+
+
 	display: flex;
 	flex-direction: column;
 }
@@ -111,7 +111,7 @@ ul {
 	justify-content: flex-start;
 	background-color: black;
 	flex-direction: row;
-	width: 90%;
+	width: 50vw;
 	background-image: url(https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48fe9f87e4a3344a46e80ddf5c3bdfa6&auto=format&fit=crop&w=1350&q=80);
 	background-size: cover;
 	background-position: center;
@@ -126,10 +126,16 @@ ul {
 	border-bottom: 1px solid rgba( 33, 33, 33, 0.325);
 }
 
-#profile-bio {
-	border: none;
+#myInfo #profile-bio {
 	font-size: 1rem;
 	border: none;
+	height: 3rem;
+	max-height: 3rem;
+	text-overflow: clip;
+	margin: 0;
+	overflow-y: scroll;
+
+
 }
 
 #myInfo p {
@@ -145,9 +151,6 @@ ul {
 	border: none;
 }
 
-#profile-age {
-	text-align: left;
-}
 
 #profile-city {
 	font-size: 1.3rem;
@@ -156,16 +159,16 @@ ul {
 #profile-image {
 	background-position: center;
 	background-size: cover;
-	width: 2rem;
+
 	max-width: 12rem;
 	height: 20rem;
 	max-height: 25rem;
-	margin-bottom: 2rem;
 	border-radius: 10px;
 }
 
 #contacts-container {
 	height: 96vh;
+
 	padding-top: 4vh;
 	display: flex;
 	justify-content: center;
@@ -176,7 +179,7 @@ ul {
 #contact-list {
 	background-color: #2d2d2d;
 
-	width: 20rem;
+	width: 20vw;
 
 	height: 96vh;
 }
@@ -266,11 +269,21 @@ ul {
 }
 
 #myInfo-heading {
-	font-size: 5rem;
+	font-size: 2.5rem;
+	margin: 0 auto;
+	margin-top: 5vh;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 	font-weight: 100;
 	font-family: 'rancho';
 	color: black;
+	width: 90%;
 	margin-bottom: 2rem;
+}
+
+#myInfo-heading .fa {
+
 }
 
 #app-nav span {
@@ -287,7 +300,7 @@ ul {
 	display: flex;
 	flex-direction: row;
 
-	padding-top: 10rem;
+	padding-top: 10vh;
 	justify-content: center;
 }
 
@@ -371,7 +384,7 @@ p {
 	animation-duration: 0s;
 	font-family: 'roboto';
 	font-weight: 400;
-	width: 30rem;
+	width: 30vw;
 	height: 96vh;
 	background-color: #212121;
 /*	background-image: url('https://images.unsplash.com/photo-1464639351491-a172c2aa2911?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=79af96b30ab6950fc40019cc33629095&auto=format&fit=crop&w=1868&q=80');
@@ -475,7 +488,7 @@ p {
 }
 
 .chatroom .input {
-	width: 28rem;
+	width: 30vw;
 	background: #1d1d1d;
 	display: flex;
 	border-radius: 0px;
@@ -530,8 +543,8 @@ p {
     background-color: #2d2d2d;
     position: fixed;
     z-index: 9;
-    width: 20%;
-    margin-top: 10rem;
+	width: 25vw;
+    margin-top: 10vh;
     animation-name: showForm;
     animation-duration: 0.5s;
     transform-origin: center;
@@ -571,7 +584,9 @@ p {
 
  .fa-edit {
     color: rgba( 24, 21, 21, 0.899 );
-    margin-left: 13rem;
+	margin-top: 0.6rem;
+	 color: #e95950;
+
 }
 #profile-form textarea {
      resize: none;
@@ -628,22 +643,29 @@ p {
 
 #myInfo #myInfo-col {
     display: flex;
+	justify-content: space-between;
     flex-direction: row;
-
+	padding: 1rem;
 }
 
 #myInfo-col #profile-image, #myInfor-col #profile-info {
-    width: 50%;
-    margin-top: 2rem;
+    min-width: 40%;
 }
+
+#myInfo #profile-info {
+	text-align: center;
+	margin-top: 5vh;
+}
+
+#myInfo-col #profile-image {
+
+
+}
+
 #myInfo #myInfo-col {
 background-color: #2d2d2d;
     color: #c1bdbd;
     margin: 0 auto;
-    padding-top: 1rem;
-    border-radius: 10px;s
+	padding: 0.5rem;
+    border-radius: 10px;
     }
-
-#profile-info {
-    margin: 1rem;
-}
