--- a/static/style/App.css
+++ b/static/style/App.css
@@ -531,6 +531,10 @@ p {
 	background: rgba( 96, 96, 96, 0.4);
 }
 
+#message-image{
+	cursor: pointer;
+}
+
 #message-image .fa {
 	color: white;
 	padding: 0.3rem;
@@ -669,3 +673,9 @@ background-color: #2d2d2d;
 	padding: 0.5rem;
     border-radius: 10px;
     }
+
+#test2{
+	display: inline-block;
+	margin-top: -75px;
+	width: 37px;
+}
