Stylade bilderna i single chatten och fixada uppdatering i gruppchatten Fixade även så att gruppchatten scrollar längst ner när man startat och när man skickar något

--- a/static/style/App.css
+++ b/static/style/App.css
@@ -451,12 +451,8 @@ p {
 }
 
 .chatroom .chats .chat img {
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	position: absolute;
-	top: -10px;
-	left: 0px;
+	max-width: 200px;
+	max-height: 200px;
 }
 
 .chatroom .chats .chat.right {
